# life

./: .gitignore  CMakeLists.txt  README.md  life
engine/include/: life_engine.h
engine/src/: life_engine.cpp
interface/: main.cpp
python_life/: Task.txt  gol_dataset.py  neuro_life.py
